Hardcode the Processor flag instead of a runtime property